--- a/cap/cap-impl/pom.xml
+++ b/cap/cap-impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>cap-parent</artifactId>
 		<groupId>org.mobicents.protocols.ss7.cap</groupId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>cap-impl</artifactId>
