--- a/hardware/dahdi/pom.xml
+++ b/hardware/dahdi/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.mobicents.protocols.ss7.hardware</groupId>
 		<artifactId>mobicents-hardware</artifactId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>mobicents-dahdi-parent</artifactId>
