--- a/hardware/dialogic/java/pom.xml
+++ b/hardware/dialogic/java/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.mobicents.protocols.ss7.hardware</groupId>
 		<artifactId>mobicents-dialogic-parent</artifactId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>mobicents-dialogic</artifactId>
