--- a/isup/isup-api/pom.xml
+++ b/isup/isup-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>isup-parent</artifactId>
 		<groupId>org.mobicents.protocols.ss7.isup</groupId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>isup-api</artifactId>
