--- a/management/shell-transport/pom.xml
+++ b/management/shell-transport/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.mobicents.protocols.ss7.management</groupId>
 		<artifactId>management</artifactId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>shell-transport</artifactId>
