--- a/map/map-impl/pom.xml
+++ b/map/map-impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>map-parent</artifactId>
 		<groupId>org.mobicents.protocols.ss7.map</groupId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>map-impl</artifactId>
