--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>ss7-parent</artifactId>
 		<groupId>org.mobicents.protocols.ss7</groupId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>mobicents-ss7</artifactId>
