--- a/statistics/impl/pom.xml
+++ b/statistics/impl/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<artifactId>statistics-parent</artifactId>
 		<groupId>org.mobicents.protocols.ss7.statistics</groupId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>statistics-impl</artifactId>
