--- a/statistics/pom.xml
+++ b/statistics/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>ss7-parent</artifactId>
 		<groupId>org.mobicents.protocols.ss7</groupId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.mobicents.protocols.ss7.statistics</groupId>
