--- a/tools/simulator/bootstrap/pom.xml
+++ b/tools/simulator/bootstrap/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>simulator-parent</artifactId>
 		<groupId>org.mobicents.protocols.ss7.tools.simulator</groupId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>simulator-bootstrap</artifactId>
