--- a/tools/trace-parser/parser/pom.xml
+++ b/tools/trace-parser/parser/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>ss7-trace-parser-parent</artifactId>
 		<groupId>org.mobicents.protocols.ss7.tools.traceparser</groupId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
