--- a/tools/trace-parser/pom.xml
+++ b/tools/trace-parser/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>tools</artifactId>
 		<groupId>org.mobicents.protocols.ss7</groupId>
-		<version>2.1.0.FINAL</version>
+		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
   <artifactId>ss7-trace-parser-parent</artifactId>
